--- a/.gitconfig
+++ b/.gitconfig
@@ -2,8 +2,8 @@
 	excludesfile = ~/.gitignore_global
 	pager = diff-so-fancy | less --tabs=1,5 -R
 [user]
-	name = Matthew Madurski
-	email = matt@matthewmadurski.com
+	name = dursk
+	email = mmadurski@managedbyq.com
 [color "diff-highlight"]
 	oldNormal = red bold
 	oldHighlight = red bold 52
