--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,7 @@
 	pager = diff-so-fancy | less --tabs=1,5 -R
 [user]
 	name = dursk
-	email = mmadurski@managedbyq.com
+	email = madurskirm@gmail.com
 [color "diff-highlight"]
 	oldNormal = red bold
 	oldHighlight = red bold 52
